ranjish hi sahi

--- a/poetry/death-be-not-proud copy.html
+++ b/poetry/death-be-not-proud copy.html
@@ -25,43 +25,46 @@
         </ul>
     </nav>
 
-    <h2> No Man is an island (Meditation XVII)</h2>
-    <h3> By John Donne </h3>
-
-    <h3> Modern Version</h3>
+    <h2> Ranjish Hi Sahi (Even If In Resentment)</h2>
+    <h3> By Ahmed Faraz </h3>
+    <br>
+    <h3> English Translation </h3>
     <p>
-        Death, be not proud, though some have called thee</br>
-        Mighty and dreadful, for thou are not so;<br>
-        For those whom thou think'st thou dost overthrow<br>
-        Die not, poor Death, nor yet canst thou kill me.<br>
-        <br>
-        From rest and sleep, which but thy pictures be,<br>
-        Much pleasure; then from thee much more must flow,<br>
-        And soonest our best men with thee do go,<br>
-        Rest of their bones, and soul's delivery.<br>
-        <br>
-        Thou'art slave to fate, chance, kings, and desperate men,<br>
-        And dost with poison, war, and sickness dwell,<br>
-        And poppy'or charms can make us sleep as well<br>
-        And better than thy stroke; why swell'st thou then?<br>
-        <br>
-        One short sleep past, we wake eternally,<br>
-        And death shall be no more; Death, thou shalt die.<br>
+        Even if in resentment, so be it, come to break my heart again<br>
+        Do come again, even if only to leave me once more.<br>
+        Even if there were no rituals done between us, still, sometime,<br>
+        Come, if only to uphold the customs of this world.<br>
+        To whom all must I explain the reason of our separation?<br>
+        Come, even if you are angry with me, for the sake of appearences.<br>
+        Hold on to the memory of my love for you, at least a little.<br>
+        Come, sometime, to console me as well.<br>
+        For so long, I have been deprived even of the pleasure of weeping.<br>
+        O, comfort of my soul, come back even if only to make me cry.<br>
+        Until now my hopeful heart has clung to some expectations of you<br>
+        At least come back to put out those last candles of hope.<br>
+        I understand that your hiding is a sign of love itself; <br>
+        Come secretly, one day, to reveal it.<br>
+        Just as the reasons come to you not to come to me<br>
+        Likewise, one day come - to not go.<br>
     </p>
 
-    <h3> Original Version</h3>
-    <p>No man is an Iland, intire of itselfe;<br>
-        every man is a peece of the Continent, <br>
-        a part of the maine;<br>
-        if a Clod bee washed away by the Sea, <br>
-        Europe is the lesse, <br>
-        as well as if a Promontorie were, <br>
-        as well as if a Manor of thy friends <br>
-        or of thine owne were; <br>
-        any mans death diminishes me,<br>
-        because I am involved in Mankinde;<br>
-        And therefore never send to know for whom the bell tolls; <br>
-        It tolls for thee.
+    <h3> Urdu Transliteration</h3>
+    <p>Ranjish hi sahi, dil hi dukhane ke liye aa,<br>
+        Aa, phir se mujhe chod ke jaane ke liye aa.<br>
+        Pehle se marasim na sahi, phir bhi kabhi to<br>
+        Rasam-o-rah-e duniya hi nibhane ke liye aa. <br>
+        Kis kis ko bataayenge judai ka sabab hum<br>
+        Tu mujh se kafa hai to zamane ke liye aa.<br>
+        Kuch to mere pindaar-e-mohabbat ka bharam rakh<br>
+        Tu bhi kabhi mujh ko manane ke liye aa.<br>
+        Ek umer se hoon lazzat-e-giriya se bhi mehroom<br>
+        Aye raahat-e-jaan mujh ko rulaane ke liye aa.<br>
+        Ab tak dil-e-khush faham ko tukh se hain ummeeden<br>
+        Ye aakhri shamme bhi bhujaane ke liye aa.<br>
+        Maana ki mohabbat ka chupaana hai mohabbat<br>
+        Chupe se kisi roz jataane ke liye aa</br>
+        Jaise tujhe aate hain na aane ke bahaane</br>
+        Aise hi kisi roz na jaane ke liye aa.</br>
     </p>
 </body>
 
