--- a/prose.html
+++ b/prose.html
@@ -33,9 +33,10 @@
 	<h3>Fiction</h3>
 
 	<b>Bildungsroman</b>
-	<p>A Tree Grows in Brooklyn by Betty Smith</p>
-	<p>A Little Life by Hanya Yanagihara</p>
-
+	<ul>
+	<li>A Tree Grows in Brooklyn by Betty Smith</li>
+	<li>A Little Life by Hanya Yanagihara</li>
+	</ul>
 	<b>Children's Literature</b>
 	<p>A Little Princess by Frances Hodgson Burnett</p>
 	<p>The Chronicles of Narnia by C.S. Lewis</p>
