--- a/prose.html
+++ b/prose.html
@@ -34,67 +34,86 @@
 
 	<b>Bildungsroman</b>
 	<ul>
-	<li>A Tree Grows in Brooklyn by Betty Smith</li>
-	<li>A Little Life by Hanya Yanagihara</li>
+		<li>A Tree Grows in Brooklyn by Betty Smith</li>
+		<li>A Little Life by Hanya Yanagihara</li>
 	</ul>
+
 	<b>Children's Literature</b>
-	<p>A Little Princess by Frances Hodgson Burnett</p>
-	<p>The Chronicles of Narnia by C.S. Lewis</p>
-
+	<ul>
+		<li>A Little Princess by Frances Hodgson Burnett</li>
+		<li>The Chronicles of Narnia by C.S. Lewis</li>
+	</ul>
 	<b>Classics</b>
-	<p>Crime and Punishment by Fyodor Dostoevsky</p>
+	<ul>
+		<li>Crime and Punishment by Fyodor Dostoevsky</li>
 
-	<b>Dsytopian</b>
-	<p>The Handmaid's Tale by Margaret Atwood</p>
-	<p>Brave New World by Aldous Huxley</p>
+		<b>Dsytopian</b>
+		<ul>
+			<li>The Handmaid's Tale by Margaret Atwood</li>
+			<li>Brave New World by Aldous Huxley</li>
+		</ul>
+		<b>Historial Fiction</b>
+		<ul>
+			<li>The Great Gatsy by F. Scott Fitzgerald</li>
+			<li>Lessons in Chemistry by Bonnie Garmus</li>
+			<li>The Kite Runner by Khaled Hosseini</li>
+			<li>Lyddie by Katherine Paterson</li>
+			<li>The Book Thief by Markus Zusak</li>
+		</ul>
+		<b>Magical Realism</b>
+		<ul>
+			<li>The Time Traveler's Wife by Audrey Niffenegger</li>
+			<li>Elsewhere by Gabrielle Zevin</li>
+		</ul>
+		<b>Mystery</b>
+		<ul>
+			<li>Gone Girl by Gillian Flynn</li>
+		</ul>
+		<b>Realistic Fiction</b>
+		<ul>
+			<li>The Bluest Eye by Toni Morrison</li>
+			<li>The Joy Luck Club by Amy Tan</li>
+		</ul>
+		<b>Science Fiction</b>
+		<ul>
+			<li>Dune by Frank Herbert</li>
+		</ul>
+		<b>Short Stories</b>
+		<ul>
+			<li>Flowers for Algernon by Daniel Keyes</li>
+			<li>A Sound of Thunder by Ray Bradbury</li>
+			<li>How I Taught My Grandmother to Read by Sudha Murthy</li>
+		</ul>
+		<br>
+		<h3>Non-Fiction</h3>
 
-	<b>Historial Fiction</b>
-	<p>The Great Gatsy by F. Scott Fitzgerald</p>
-	<p>Lessons in Chemistry by Bonnie Garmus</p>
-	<p>The Kite Runner by Khaled Hosseini</p>
-	<p>Lyddie by Katherine Paterson</p>
-	<p>The Book Thief by Markus Zusak</p>
+		<b>Essays</b>
+		<ul>
+			<li>Consider the Lobster by David Foster Wallace</li>
+		</ul>
 
-	<b>Magical Realism</b>
-	<p>The Time Traveler's Wife by Audrey Niffenegger</p>
-	<p>Elsewhere by Gabrielle Zevin</p>
+		<b>Memoirs</b>
+		<ul>
+			<li>Escape from Camp 14 by Blaine Harden</li>
+			<li>Beneath the Surface by John Hargrove</li>
+		</ul>
+		<b>Psychology</b>
+		<ul>
+			<li>Attachment Disturbances in Adults by Daniel P. Brown</li>
+			<li>Man and His Symbols by Carl Jung</li>
+			<li>Nonviolent Communication by Marshall Rosenberg</li>
+		</ul>
 
-	<b>Mystery</b>
-	<p>Gone Girl by Gillian Flynn</p>
-
-	<b>Realistic Fiction</b>
-	<p>The Bluest Eye by Toni Morrison</p>
-	<p>The Joy Luck Club by Amy Tan</p>
-
-	<b>Science Fiction</b>
-	<p>Dune by Frank Herbert</p>
-
-	<b>Short Stories</b>
-	<p>Flowers for Algernon by Daniel Keyes</p>
-	<p>A Sound of Thunder by Ray Bradbury
-	<p>How I Taught My Grandmother to Read by Sudha Murthy</p>
-	<br>
-	<h3>Non-Fiction</h3>
-
-	<b>Essays</b>
-	<p>Consider the Lobster by David Foster Wallace</p>
-
-	<b>Memoirs</b>
-	<p>Escape from Camp 14 by Blaine Harden</p>
-	<p>Beneath the Surface by John Hargrove</p>
-
-	<b>Psychology</b>
-	<p>Attachment Disturbances in Adults by Daniel P. Brown</p>
-	<p>Man and His Symbols by Carl Jung</p>
-	<p>Nonviolent Communication by Marshall Rosenberg</p>
-
-	<b>Sociology</b>
-	<p>Guest House for Young Widows: Among the Women of ISIS by Azadeh Moaveni</p>
-	<p>Far From The Tree: Parents, Children and the Search for Identity by Andrew Solomon</p>
-
-	<b>True Crime</b>
-	<p>Columbine by Dave Cullen</p>
-	<p>I'll Be Gone in the Dark by Michelle McNamara</p>
+		<b>Sociology</b>
+		<ul>
+			<li>Guest House for Young Widows: Among the Women of ISIS by Azadeh Moaveni</li>
+			<li>Far From The Tree: Parents, Children and the Search for Identity by Andrew Solomon</li>
+		</ul>
+		<b>True Crime</b>
+		<ul>
+			<li>Columbine by Dave Cullen</li>
+			<li>I'll Be Gone in the Dark by Michelle McNamara</li>
+		</ul>
 </body>
 
 <footer>
