--- a/poetry/ranjish-hi-sahi.html
+++ b/poetry/ranjish-hi-sahi.html
@@ -28,7 +28,7 @@
     <h2> Ranjish Hi Sahi (Even If In Resentment)</h2>
     <h3> By Ahmed Faraz </h3>
     <br>
-    <h3> English Translation </h3>
+    <h4> English Translation </h4>
     <p>
         Even if in resentment, so be it, come to break my heart again<br>
         Do come again, even if only to leave me once more.<br>
@@ -44,11 +44,11 @@
         At least come back to put out those last candles of hope.<br>
         I understand that your hiding is a sign of love itself; <br>
         Come secretly, one day, to reveal it.<br>
-        Just as the reasons come to you not to come to me<br>
+        Just as the reasons not to come to me, come to you <br>
         Likewise, one day come - to not go.<br>
     </p>
 
-    <h3> Urdu Transliteration</h3>
+    <h4> Urdu Transliteration</h4>
     <p>Ranjish hi sahi, dil hi dukhane ke liye aa,<br>
         Aa, phir se mujhe chod ke jaane ke liye aa.<br>
         Pehle se marasim na sahi, phir bhi kabhi to<br>
