--- a/poetry/epitaph-to-a-dog.html
+++ b/poetry/epitaph-to-a-dog.html
@@ -17,14 +17,14 @@
 <body>
     <h1>Violet Sinnarkar</h1>
 
-	<nav>
-		<ul>
-			<li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
-			<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-			<li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
-			<li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
-		</ul>
-	</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+            <li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+            <li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
+            <li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
+        </ul>
+    </nav>
 
     <h2> Epitaph to a Dog </h2>
     <h3> By Lord Byron </h3>
@@ -72,11 +72,11 @@
     <p> <b>Personal Notes</b>:</p>
     <p> May 2018: In memory of Coco </p>
 
-    <p><img class="poem_hori_image" src="../photos/cocoa/cocoa-brothers.JPG" /></p>
+    <img class="poem_hori_image" src="../photos/cocoa/cocoa-brothers.JPG" />
     <p class="image-caption">Coco with his brother Spot, undated.</p>
-    <p><img class="poem_vert_image" src="../photos/cocoa/cocoa-berkeley.jpeg" /></p>
+    <img class="poem_vert_image" src="../photos/cocoa/cocoa-berkeley.jpeg" />
     <p class="image-caption">Coco & I in the backyard in May 2016.</p>
-    <img class="poem_hori_image" src="../photos/cocoa/cocoa-thanksgiving.JPG" /></p>
+    <img class="poem_hori_image" src="../photos/cocoa/cocoa-thanksgiving.JPG" />
     <p class="image-caption">Coco on Thanksgiving 2017.</p>
 
 </body>
