adding urdu original

--- a/poetry.html
+++ b/poetry.html
@@ -130,7 +130,8 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/ranjish-hi-sahi.html" style="color: #8F5E99">Ranjish Hi Sahi (Even If In Resentment)</a></td>
+				<td><a href="poetry/ranjish-hi-sahi.html" style="color: #8F5E99">Ranjish Hi Sahi (Even If In
+						Resentment)</a></td>
 				<td>Ahmed Faraz</td>
 				<td>Pakistani</td>
 				<td>Contemporary</td>
@@ -310,7 +311,7 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/dulce-et-decorum-est.html"  style="color: #8F5E99">Dulce Et Decorum Est</a></td>
+				<td><a href="poetry/dulce-et-decorum-est.html" style="color: #8F5E99">Dulce Et Decorum Est</a></td>
 				<td>Wilfred Owen</td>
 				<td>British</td>
 				<td>Modernist</td>
@@ -443,6 +444,12 @@
 	<br>
 	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
 		will enter in 2059. Roald Dahl's work will enter in 2061.</p>
+	<br>
+	<p> You can read more from the authors mentioned above at these websites:</p>
+	<p><a href="https://cummings.ee/">e.e. cummings free poetry archive</a></p>
+	<p><a href="https://dorothyparker.com/">Dorothy Parker Society</a></p>
+	<p>Anniina Jokinen's <a href="https://www.luminarium.org/sevenlit/metaphysical.htm">Luminarium: Metaphysical Poets</a><p>
+
 	<footer>
 		<p><small>© Violet Sinnarkar 2025 </small></p>
 	</footer>
