--- a/poetry/late-fragment.html
+++ b/poetry/late-fragment.html
@@ -27,7 +27,7 @@
 
     <h2> Late Fragment </h2>
     <h3> By Raymond Carver </h3>
-    <p><img class="poem_vert_image" src="../photos/late-fragment.jpg" />
+    <p><img class="poem_vert_large_image" src="../photos/late-fragment.jpg" />
 
     <p> <b>Personal Notes</b>:</p>
     <p> May 2025: A photo by <a href="https://www.linkedin.com/in/beckpictures">Erik Lee Beck</a>, taken at Carver's
