--- a/poetry/no-man-is-an-island.html
+++ b/poetry/no-man-is-an-island.html
@@ -18,14 +18,16 @@
     <h1>Violet Sinnarkar</h1>
     <nav>
         <ul>
-            <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+            <li><a href="index.html" style="color: #8F5E99">Home</a></li>
             <li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
             <li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
             <li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
         </ul>
     </nav>
-    <h2> No Man Is an Island </h2>
+    <h2> No Man Is an Island (Meditation XVII) </h2>
     <h3> By John Donne </h3>
+
+    <p><b> Modern Translation</b></p>
     <p>
         No man is an island,<br>
         Entire of itself;<br>
@@ -41,8 +43,20 @@
         And therefore never send to know for whom the bell tolls;<br>
         It tolls for thee.<br>
     </p>
+    <br>
+    <p><b>Original Text</b></p>
 
-    <p> <b>Personal Notes</b>:</p>
+    <p>NUNC LENTO SONITU DICUNT, MORIERIS.</p>
+    <p><i>Now, this bell tolling softly for another, says to me "Thou must die."</i></p>
+    <p>No man is an Iland, intire of itselfe; every man<br>
+        is a peece of the Continent, a part of the maine;<br>
+        if a Clod bee washed away by the Sea, Europe<br>
+        is the lesse, as well as if a Promontorie were, as<br>
+        well as if a Manor of thy friends or of thine<br>
+        owne were; any mans death diminishes me,<br>
+        because I am involved in Mankinde;<br>
+        And therefore never send to know for whom<br>
+        the bell tolls; It tolls for thee.<br>
 </body>
 
 </html>
