--- a/prose.html
+++ b/prose.html
@@ -28,104 +28,10 @@
 		</ul>
 	</nav>
 
-	<p>Here are some of my favorite books. </p>
-
-	<h3>Fiction</h3>
-
-	<b>Bildungsroman</b>
-	<ul>
-		<li>A Tree Grows in Brooklyn by Betty Smith</li>
-		<li>A Little Life by Hanya Yanagihara</li>
-	</ul>
-
-	<b>Children's Literature</b>
-	<ul>
-		<li>A Little Princess by Frances Hodgson Burnett</li>
-		<li>The Chronicles of Narnia by C.S. Lewis</li>
-	</ul>
-
-	<b>Classics</b>
-	<ul>
-		<li>Crime and Punishment by Fyodor Dostoevsky</li>
-	</ul>
-
-	<b>Dsytopian</b>
-	<ul>
-		<li>The Handmaid's Tale by Margaret Atwood</li>
-		<li>Brave New World by Aldous Huxley</li>
-	</ul>
-
-	<b>Historial Fiction</b>
-	<ul>
-		<li>The Great Gatsy by F. Scott Fitzgerald</li>
-		<li>Lessons in Chemistry by Bonnie Garmus</li>
-		<li>The Kite Runner by Khaled Hosseini</li>
-		<li>Lyddie by Katherine Paterson</li>
-		<li>The Book Thief by Markus Zusak</li>
-	</ul>
-
-	<b>Magical Realism</b>
-	<ul>
-		<li>The Time Traveler's Wife by Audrey Niffenegger</li>
-		<li>Elsewhere by Gabrielle Zevin</li>
-	</ul>
-
-	<b>Mystery</b>
-	<ul>
-		<li>Gone Girl by Gillian Flynn</li>
-	</ul>
-
-	<b>Realistic Fiction</b>
-	<ul>
-		<li>The Bluest Eye by Toni Morrison</li>
-		<li>The Joy Luck Club by Amy Tan</li>
-	</ul>
-
-	<b>Science Fiction</b>
-	<ul>
-		<li>The Dune Series by Frank Herbert</li>
-	</ul>
-
-	<b>Short Stories</b>
-	<ul>
-		<li>Flowers for Algernon by Daniel Keyes</li>
-		<li>A Sound of Thunder by Ray Bradbury</li>
-		<li>How I Taught My Grandmother to Read by Sudha Murthy</li>
-	</ul>
-
+	<p><a href="fav-books.html">Books</a></p>
 	<br>
+	<p><a href="fav-quotes.html">Quotes</a></p>
 
-	<h3>Non-Fiction</h3>
-
-	<b>Essays</b>
-	<ul>
-		<li>Consider the Lobster by David Foster Wallace</li>
-	</ul>
-
-	<b>Memoirs</b>
-	<ul>
-		<li>Escape from Camp 14 by Blaine Harden</li>
-		<li>Beneath the Surface by John Hargrove</li>
-	</ul>
-
-	<b>Psychology</b>
-	<ul>
-		<li>Attachment Disturbances in Adults by Daniel P. Brown</li>
-		<li>Man and His Symbols by Carl Jung</li>
-		<li>Nonviolent Communication by Marshall Rosenberg</li>
-	</ul>
-
-	<b>Sociology</b>
-	<ul>
-		<li>Guest House for Young Widows: Among the Women of ISIS by Azadeh Moaveni</li>
-		<li>Far From The Tree: Parents, Children and the Search for Identity by Andrew Solomon</li>
-	</ul>
-	
-	<b>True Crime</b>
-	<ul>
-		<li>Columbine by Dave Cullen</li>
-		<li>I'll Be Gone in the Dark by Michelle McNamara</li>
-	</ul>
 </body>
 
 <footer>
