--- a/poetry/epitaph-to-a-dog.html
+++ b/poetry/epitaph-to-a-dog.html
@@ -19,7 +19,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+            <li><a href="index.html" style="color: #8F5E99">Home</a></li>
             <li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
             <li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
             <li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
