--- a/poetry/ranjish-hi-sahi.html
+++ b/poetry/ranjish-hi-sahi.html
@@ -18,7 +18,7 @@
     <h1>Violet Sinnarkar</h1>
     <nav>
         <ul>
-            <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+            <li><a href="index.html" style="color: #8F5E99">Home</a></li>
             <li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
             <li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
             <li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
@@ -28,9 +28,9 @@
     <h2> Ranjish Hi Sahi (Even If In Resentment)</h2>
     <h3> By Ahmed Faraz </h3>
     <br>
-    <h4> English Translation </h4>
+    <p> <b>English Translation </b></p>
     <p>
-        Even if in resentment, so be it, come to break my heart again<br>
+        Even if in resentment, come to break my heart again<br>
         Do come again, even if only to leave me once more.<br>
         Even if there were no rituals done between us, still, sometime,<br>
         Come, if only to uphold the customs of this world.<br>
@@ -48,7 +48,7 @@
         Likewise, one day come - to not go.<br>
     </p>
 
-    <h4> Urdu Transliteration</h4>
+    <p><b> Urdu Transliteration</b></p>
     <p>Ranjish hi sahi, dil hi dukhane ke liye aa,<br>
         Aa, phir se mujhe chod ke jaane ke liye aa.<br>
         Pehle se marasim na sahi, phir bhi kabhi to<br>
@@ -65,6 +65,22 @@
         Chupe se kisi roz jataane ke liye aa</br>
         Jaise tujhe aate hain na aane ke bahaane</br>
         Aise hi kisi roz na jaane ke liye aa.</br>
+    </p>
+
+    <p lang="ur" dir="rtl"><b> Urdu Original Text</b></p>
+    <p>
+        رنجش ہی سہی دل ہی دکھانے کے لیے آ<br>
+        آ پھر سے مجھے چھوڑ کے جانے کے لیے آ<br>
+        پہلے سے مراسم نہ سہی پھر بھی کبھی تو<br>
+        رسم و رہِ دنیا ہی نبھانے کے لیے آ<br>
+        کس کس کو بتائیں گے جدائی کا سبب ہم<br>
+        تو مجھ سے خفا ہے تو زمانے کے لیے آ<br>
+        کچھ تو مرے پندار محبت کا بھرم رکھ<br>
+        تو بھی تو کبھی مجھ کو منانے کے لیے آ<br>
+        اک عمر سے ہوں لذتِ گریہ سے بھی محروم<br>
+        اے راحتِ جاں مجھ کو رلانے کے لیے آ<br>
+        اب تک دل خوش فہم کو ہیں تجھ سے امیدیں<br>
+        یہ آخری شمعیں بھی بجھانے کے لیے آ <br>
     </p>
 </body>
 
